--- a/app/views/providers/index.html
+++ b/app/views/providers/index.html
@@ -1,17 +1,4 @@
-<div class="up-var">
-  <div class="upper-menu">
-    <div class="wrapper" >
-      <ul>
-        <li><a href='/providers/main'>マイページ</a></li>
-        <li><a href='/providers/inbox'>メッセージ</a></li>
-        <li><%= link_to '掲載中', notes_path %></li>
-        <li><a href=''>取引履歴</a></li>
-        <li><a href='#'>基本情報</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
-
+<%= render 'providers/header' %>
 
 <div class="providers_info_show">
 
@@ -23,6 +10,11 @@
 </div>
 </div>
 <h2>店舗の基本情報</h2> 
+
+  <div class="field">
+    <h3>店舗名</h3>
+    <%= current_provider.name %>
+  </div>
 
 
  <div class="field">
