--- a/app/views/mailbox/inbox.html.erb
+++ b/app/views/mailbox/inbox.html.erb
@@ -1,17 +1,5 @@
-<div class="up-var">
-  <div class="upper-menu">
-    <div class="wrapper" >
-      <ul>
-        <li><a href='/users'>マイページ</a></li>
-         <li><a href='/mailbox/inbox'>メッセージ
+<%= render 'users/header' %>
 
-        <li><a href=''>取引履歴</a></li>
-        <li><a href='/users/edit'>基本設定</a></li>
-       
-      </ul>
-    </div>
-  </div>
-</div>
 
 
 <div class="bootstrap">
@@ -23,6 +11,4 @@
 <%= render partial: 'mailbox/folder_view', locals: { is_conversation: false, messages: @inbox } %>
   </div>
   </div></div></div>
-
-
 
