--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -17,11 +17,11 @@
  <div id="fade-in2" class="dropmenu">
   <div class="wrapper" >
    <ul>
-    <li><a href="/housing/index"><i class="fa fa-home fa-fw"></i>住まい</a></li>
-    <li><a href="/housing/event"><i class="fa fa-glass fa-fw"></i>イベント</a></li>
-    <li><a href="/housing/lesson"><i class="fa fa-book fa-fw"></i>習い事</a></li>
-    <li><a href="/housing/health"><i class="fa fa-heart fa-fw"></i>健康</a></li>
-    <li><a href="/housing/others"><i class="fa fa-list-ul fa-fw"></i>その他</a></li>
+    <li><a href="/category/housing"><i class="fa fa-home fa-fw"></i>住まい</a></li>
+    <li><a href="/category/event"><i class="fa fa-glass fa-fw"></i>イベント</a></li>
+    <li><a href="/category/lesson"><i class="fa fa-book fa-fw"></i>習い事</a></li>
+    <li><a href="/category/health"><i class="fa fa-heart fa-fw"></i>健康</a></li>
+    <li><a href="/category/others"><i class="fa fa-list-ul fa-fw"></i>その他</a></li>
    </ul>
   </div>
  </div>
