--- a/app/views/mailbox/trash.html.erb
+++ b/app/views/mailbox/trash.html.erb
@@ -1,18 +1,6 @@
+<%= render 'users/header' %>
 
 
-<div class="up-var">
- <div class="upper-menu">
-    <div class="wrapper" >
-    <ul>
-     <li><a href='/users/index'>マイページ</a></li>
-     <li><%= link_to '掲載中', notes_path %></li>
-     <li><a href=''>取引方法</a></li>
-     <li><a href='/users/edit'>設定</a></li>
-     <li><a href='/mailbox/inbox'>メッセージ</a></li>
-    </ul>
-    </div>
-  </div>
-  </div>
 
 <div class="bootstrap">
 <div class="mypage-all_wrapper">
@@ -27,5 +15,6 @@
   </div>
   </div>
   </div>
+
 
 
