--- a/app/views/providers/main.html.erb
+++ b/app/views/providers/main.html.erb
@@ -2,12 +2,12 @@
 
 
 <div class="mypage-all_wrapper">
-   <h1 class="user_page_name"><%= current_provider.name %>さんのページ  </h1>
-     <a class="profile_edit" href="/providers"><i class="fa fa-pencil" aria-hidden="true"></i>プロフィールを編集</a>
+   <h1><%= current_provider.name %>さんのページ  </h1>
 
-   <p class="rates">レビュー 1000件 ★★★★★</p>
- 
- <div class="provider-contents">
+     <a class="profile_edit" href="/providers">
+     <i class="fa fa-pencil" aria-hidden="true"></i>プロフィールを編集</a>
+
+
 
  <div class="left-wrapper">
  <% if current_provider.provider_pic? %>
@@ -58,5 +58,5 @@
        <ul class="notes">
       </ul>
 </div>
-  </div>
+
   </div>
