--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -90,7 +90,8 @@
 <tr>
  <th> <p>写真<span class="form-label required">必須</span></p></th>
  <td>
-  <%= f.file_field :image_1, class: "form-control image-field" %>
+  <%= f.file_field :service_image1, class: "form-control image-field" %>
+ 
 </td>
 </tr>
 </div>
