--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -16,7 +16,7 @@
           <%= link_to note.title, note_path(note) %>
          </div>
            <div class="panel-body-list">
-             <%= image_tag "/note_images/#{note.image_1}" ,class: "service_image"%>
+           <%= image_tag note.service_image1_url ,class: "service_image"%>
              <%= link_to '編集する', edit_note_path(note) %>
           
            </div>
@@ -25,16 +25,13 @@
    
 
      <% end %>
-
-
-
      </ul>
-     
-
-
+    
 </div>
 
 </div>
+
+
 
 
 <div class="bootstrap">
@@ -42,3 +39,6 @@
          <%= paginate(@notes) %>
       </div>
      </div>
+
+
+
