--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -88,7 +88,7 @@
 <tr>
  <th> <p>写真<span class="form-label required">必須</span></p></th>
  <td>
-  <%= f.file_field :image_1, class: "form-control image-field" %>
+  <%= f.file_field :service_image1, class: "form-control image-field" %>
 </td>
 </tr>
 </div>
