--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -14,9 +14,12 @@
 
   <div class="provider-introduction">
     <h1>  <%= @note.title %></h1>
-    <% if @note.image_1? %>
+    <% if @note.service_image1? %>
    
-    <%= image_tag "/note_images/#{@note.image_1}" ,class: "face_pic"%>
+
+<%= image_tag @note.service_image1.thumb.url ,class: "face_pic"%>
+
+  
 
     <% else %>
     <%= image_tag 'Seekle_icon.png', :class => 'face_pic'%>
