--- a/app/views/users/history.html.erb
+++ b/app/views/users/history.html.erb
@@ -13,17 +13,16 @@
 <p>予約中のサービスはまだありません</p>
 <% else %>
 <div class="bootstrap">
-		<% current_user.reservations.each do |reservation| %>
+		<% @reservations.each do |reservation| %>
 
 <div class="panel panel-default">
-
 
   <div class="panel-body">
   	<table class="newpost">
 		<tr>
 			<td><%= reservation.date %></td>
-             <td><%= reservation.note.title%></td>
-			<td><%= reservation.note.provider.name %></td>
+           <td><%= reservation.note.title %></td>
+           <td><%= reservation.note.provider.name %></td>
 		</tr>
 		</table>
 	</div></div>
@@ -31,7 +30,4 @@
 		<% end %>
 </div>
 </div>
-
-
-<div
 
