--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -91,7 +91,7 @@
  <th> <p>写真<span class="form-label required">必須</span></p></th>
  <td>
   <%= f.file_field :service_image1, class: "form-control image-field" %>
- 
+  <%= f.hidden_field :service_image1_cache %>
 </td>
 </tr>
 </div>
