--- a/app/views/providers/registrations/edit.html.erb
+++ b/app/views/providers/registrations/edit.html.erb
@@ -67,6 +67,7 @@
  <th> <p>店舗写真<span class="form-label required">必須</span> </p></th>
  <td>
   <%= f.file_field :provider_pic, class: "form-control image-field" %>
+   <%= f.hidden_field :provider_pic_cache %>
 </td>
 </tr>
 
