--- a/app/assets/stylesheets/housing/housing.css
+++ b/app/assets/stylesheets/housing/housing.css
@@ -1,4 +1,47 @@
- .upper-menu,.upper-menu ul li:hover{-webkit-tap-highlight-color:transparent}.categories ul li,.details{list-style:none;float:left}.genre,.top_home_page{background-color:#F5F5F5}.up-var{padding-top:57px}.upper-menu{text-align:center;height:50px;cursor:pointer;margin-top:-43px;margin-left:-170px;border-top:2px solid #ebebeb;border-bottom:2px solid #ebebeb;transition:all .5s}.upper-menu ul li{margin-top:16px;text-transform:uppercase;font-size:14px;font-weight:700;width:13%;float:left;box-sizing:border-box;border-right:1px solid #ebebeb;overflow:hidden}.upper-menu ul li:hover{color:gray}.home-all-wrapper{position:relative;height:1000px}.top_home_page{height:280px;width:2000px;position:relative}.top_home_page h1,.top_home_page h3{position:absolute;margin-right:740px}.top_home_page h1{right:550px;bottom:100px;font-size:50px}.top_home_page h3{font-size:15px;right:450px;bottom:80px}.home_pictures_wrapper{text-align:left}.home_pictures_wrapper h1{color:#696969;margin-left:100px;padding-top:30px;padding-bottom:10px}.home_pictures{margin-left:144px}.home_pictures p{text-align:center;text-rendering:optimizeLegibility;width:70%;margin:0 auto}.pic{float:left;width:0 auto;margin:4px}.home-all-wrapper h2{margin-left:154px}.categories ul{margin-left:92px}.categories ul li{height:140px;margin-top:30px;margin-left:10px;padding:3px;width:21%;font-size:17px;border-radius:4px}.home-story-wrapper{height:600px}.home-story{margin-left:109px;padding-top:25px}.panel-body-housing{height:120px;width:100%}.services-detail-wrapper{margin:39px}.services-detail-wrapper h2{border-bottom:1px solid #006400;margin:60px;padding-top:10px}.dynamic-row{padding:10px 0 20px;display:block;width:100%;margin:30px}.dynamic-row li{line-height:17px}.details{display:inline;height:200px;width:30%}.genre{margin-top:20px;width:100%;height:40px;border-bottom:1px solid #F5F5F5}.genre p{padding-left:20px;font-size:14px}.left-other-housing{float:left;height:1400px;display:block;clear:both;}.other-jobs-menu{margin-left:110px;line-height:30px}.other-jobs-menu ul li{color:#696969}.find-wrapper{float:right}.search-provider{margin-right:30px;margin-top:26px;float:left;width:1000px;height:1800px}.create_requirement{margin-top:10px;margin-left:32px}.date,.gender,.price{margin-bottom:30px;margin-top:10px}.provider_service_image{border-radius: 6px;width:30%;height:180px;float:left;padding:10px;}.provider_job{height:200px;border:1px solid gray;width:60%;position:relative;margin-top:10px;margin-bottom:18px;margin-left:135px;float:left;border-radius: 6px;}.provider_image{border-radius:100%;float:left}.provider_job h3{margin-top:30px;float:left}.provider_job p{font-size:13px;line-height:20px;text-align:center}
+ .upper-menu,.upper-menu ul li:hover{-webkit-tap-highlight-color:transparent}
+ .categories ul li,.details{list-style:none;float:left}
+ .genre,.top_home_page{background-color:#F5F5F5}
+ .up-var{padding-top:57px}
+ .upper-menu{text-align:center;height:50px;cursor:pointer;margin-top:-43px;margin-left:-170px;border-top:2px solid #ebebeb;border-bottom:2px solid #ebebeb;transition:all .5s}
+ .upper-menu ul li{margin-top:16px;text-transform:uppercase;font-size:14px;font-weight:700;width:13%;float:left;box-sizing:border-box;border-right:1px solid #ebebeb;overflow:hidden}
+ .upper-menu ul li:hover{color:gray}
+ .home-all-wrapper{position:relative;height:1000px}
+ .top_home_page{height:280px;width:2000px;position:relative}
+ .top_home_page h1,.top_home_page h3{position:absolute;margin-right:740px}
+ .top_home_page h1{right:550px;bottom:100px;font-size:50px}
+ .top_home_page h3{font-size:15px;right:450px;bottom:80px}
+ .home_pictures_wrapper{text-align:left}
+ .home_pictures_wrapper h1{color:#696969;margin-left:100px;padding-top:30px;padding-bottom:10px}
+ .home_pictures{margin-left:144px}
+ .home_pictures p{text-align:center;text-rendering:optimizeLegibility;width:70%;margin:0 auto}
+ .pic{float:left;width:0 auto;margin:4px}
+ .home-all-wrapper h2{margin-left:154px}
+ .categories ul{margin-left:92px}
+ .categories ul li{height:140px;margin-top:30px;margin-left:10px;padding:3px;width:21%;font-size:17px;border-radius:4px}
+ .home-story-wrapper{height:600px}
+ .home-story{margin-left:109px;padding-top:25px}
+ .panel-body-housing{height:120px;width:100%}
+ .services-detail-wrapper{margin:39px}
+ .services-detail-wrapper h2{border-bottom:1px solid #006400;margin:60px;padding-top:10px}.dynamic-row{padding:10px 0 20px;display:block;width:100%;margin:30px}
+ .dynamic-row li{line-height:17px}
+ .details{display:inline;height:200px;width:30%}
+ .genre{margin-top:20px;width:100%;height:40px;border-bottom:1px solid #F5F5F5}
+ .genre p{padding-left:20px;font-size:14px}
+ .left-other-housing{float:left;height:1400px;display:block;clear:both;}
+ .other-jobs-menu{margin-left:110px;line-height:30px}
+ .other-jobs-menu ul li{color:#696969}
+ .find-wrapper{float:right}
+ .search-provider{margin-right:30px;margin-top:26px;float:left;width:1000px;height:1800px}
+ .create_requirement{margin-top:10px;margin-left:32px}
+ .date,.gender,.price{margin-bottom:30px;margin-top:10px}
+
+ .provider_service_image{
+ 	border-radius: 16px;width:30%;height:180px;float:left;padding:10px;
+ 	}
+ .provider_job{
+ 	height:200px;border:1px solid gray;width:60%;position:relative;margin-top:10px;margin-bottom:18px;margin-left:135px;float:left;border-radius: 6px;
+ 	}
+ 	.provider_image{border-radius:100%;float:left}.provider_job h3{margin-top:30px;float:left}.provider_job p{font-size:13px;line-height:20px;text-align:center}
 
 .title h2{margin-top:10px;font-size:16px;}
 .provider_image{height:74px;width:74px;margin-left:140px;margin-top:58px}.show_providers{margin-top:50px;margin-bottom:90px}.service-price{font-weight:1px}.clearfix:after{content:"";display:block;clear:both}.footer-bottom{clear:both}
