--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -18,27 +18,20 @@
            <div class="panel-body-list">
            <%= image_tag note.service_image1_url ,class: "service_image"%>
              <%= link_to '編集する', edit_note_path(note) %>
-          
            </div>
          </div>
-      </li>
-   
-
+      </li>   
      <% end %>
      </ul>
-    
+  </div>
 </div>
-
-</div>
-
-
 
 
 <div class="bootstrap">
-       <div class="list-number-2 clearfix">
-         <%= paginate(@notes) %>
-      </div>
-     </div>
+ <div class="list-number clearfix">
+   <%= paginate(@notes) %>
+ </div>
+</div>
 
 
 
