--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -83,7 +83,7 @@
 <tr>
  <th> <p>詳しいサービスの内容<span class="form-label optional">任意</span></p></th>
  <td>
-  <%= f.text_area :price, class: 'content-area', placeholder:"あなたのサービスについて詳しく説明しよう" %>
+  <%= f.text_area :content, class: 'content-area', placeholder:"あなたのサービスについて詳しく説明しよう" %>
 </td>
 </tr>
 
