--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -17,7 +17,7 @@
          </div>
            <div class="panel-body-list">
            <%= image_tag note.service_image1_url ,class: "service_image"%>
-             <%= link_to '編集する', edit_note_path(note) %>
+             <%= link_to '編集する', edit_note_path(note), class:"note_edit_link" %>
            </div>
          </div>
       </li>   
