--- a/app/assets/stylesheets/notes/index.css
+++ b/app/assets/stylesheets/notes/index.css
@@ -230,3 +230,7 @@ table.newpost tr{
 .service_explain{height:0 auto;width:73%; margin-left:14%;margin-bottom:15px;margin-top:20px;float:left;}
 .service_explain h3{margin-left:750px;margin-top:60px;}
 .service_explain h1{font-weight: normal;font-size: 22px;margin-bottom: -20px;}
+
+
+
+.note_edit_link{margin-left:50%;}
