--- a/app/assets/stylesheets/notes/review.css
+++ b/app/assets/stylesheets/notes/review.css
@@ -4,3 +4,6 @@
 .review-wrapper{margin-top: 40px;margin-bottom: 20px;}
 .reviews{margin-top:28px; margin-left:85px;border-bottom: 1px solid #DCDCDC; width:80%;}
 .reviews p{margin-bottom: 30px;}
+
+.new_review_wrapper{margin-left: 20%;margin-top:5%; margin-bottom:10%;}
+.new_review_wrapper h1{font-weight: normal;}
