--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Review</h1>
+<div class="new_review_wrapper">
+<h1>レビューを書こう！</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back',  note_path(@note) %>
+</div>
