--- a/app/views/home/pro.html
+++ b/app/views/home/pro.html
@@ -6,7 +6,7 @@
 <a img="https://pixabay.com/static/uploads/photo/2015/06/08/15/06/woman-801872_960_720.jpg">
        </a>
      </div>
-      <h1>こんなビジネスを始めてみたい。</h1>
+      <h1>加速するあなたのビジネス！</h1>
 
      <p>ビジネスをもっと身近に始めよう</p>
 
@@ -38,7 +38,7 @@
     <i class="fa fa-clock-o fa-5x"></i>
      </div>
     <h2>ホームページ作成不要！</h2>
-<p>店舗のホームページを作るのは大変。。<br>何十万円のお金を払って外注するか、自分でサイトを作成しなければなりません。作っても検索エンジンの上位に上がるのは大手の会社が多いのです。Seekleでは頑張れば頑張るほど、あなたのサービスが上位に上がり広告塔となります！</p>
+<p>店舗のホームページを作るのは大変。。<br>お金を払って外注するか、自分でサイトを作成しなければなりません。作っても検索エンジンの上位に上がるのは大手の会社が多いのです。Seekleでは頑張れば頑張るほど、あなたのサービスが上位に上がり広告塔となります！</p>
         </div>
   </div>
      <div class="reasons">
@@ -48,7 +48,7 @@
         </div>
       <h2>登録費、掲載費無料！</h2>
 
-<p>お客様との契約が成立してから手数料の15%をいただきます。<br>それまでの登録料、掲載費は全て無料！
+<p>お客さんとの契約が成立してから手数料の15%をいただきます。それまでの登録料、掲載費は全て無料！
 </p>
         </div>
   </div>
@@ -58,8 +58,8 @@
        <div class="icons">
       <i class="fa fa-bullhorn fa-5x"></i>
      </div>
-   <h2>好きな仕事をしたい！</h2>
-<p>"自分はこんな資格持っているのに、普段の生活で使うことがない"。 例えば、"家に人を呼んで料理教室を始めたいな" と、考えた経験はありませんか？Seekleはあなたのスキルを他の人に共有できる機会を作ります。</p>
+   <h2>口コミを集めましょう！</h2>
+<p>サービス提供後、お客さんがサービスに対してのレビューを書きます。たくさんの良い口コミを集めてたくさんの人に人気店舗として知ってもらいましょう！</p>
         </div>
   </div>
   </div>
