--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -17,7 +17,10 @@
          </div>
            <div class="panel-body-list">
            <%= image_tag note.service_image1_url ,class: "service_image"%>
-             <%= link_to '編集する', edit_note_path(note), class:"note_edit_link" %>
+   <%= link_to '予約を確認する', note_reservations_path(note), class:"btn btn-default" %>
+             <%= link_to '編集する', edit_note_path(note), class:"btn btn-default" %>
+
+          
            </div>
          </div>
       </li>   
