--- a/app/assets/stylesheets/home/index.css
+++ b/app/assets/stylesheets/home/index.css
@@ -4,7 +4,17 @@
 
 .top-wrapper{position:relative}
 
-.top-wrapper{margin-top:-90px;color:#fff;background-color:	#66CDAA;text-align:center;padding:150px 0 130px}
+
+.top-wrapper{margin-top:-90px;color:#fff;
+  background: -webkit-linear-gradient(90deg, #66CDAA 10%, #93F9B9 90%);
+  background:    -moz-linear-gradient(90deg,#66CDAA 10%, #93F9B9 90%);
+  background:     -ms-linear-gradient(90deg,#66CDAA 10%, #93F9B9 90%);
+  background:      -o-linear-gradient(90deg, #66CDAA 10%, #93F9B9 90%);
+  background:         linear-gradient(90deg, #66CDAA 10%, #93F9B9 90%);
+  ;text-align:center;padding:150px 0 130px
+}
+
+
 .top-wrapper h1{opacity:.9;font-size:45px;letter-spacing:5px;padding-top:20px}
 .top-wrapper p{opacity:.7;font-size:14px;margin-bottom:35px}
 .btn{background-color:#6495ED}.btn:hover{opacity:1}
