--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -15,7 +15,7 @@
  </div>
 
  <div id="fade-in2" class="dropmenu">
-  <div class="wrapper" >
+  <div class="wrapper">
    <ul>
     <li><a href="/category/housing"><i class="fa fa-home fa-fw"></i>住まい</a></li>
     <li><a href="/category/event"><i class="fa fa-glass fa-fw"></i>イベント</a></li>
@@ -26,12 +26,11 @@
   </div>
  </div>
 
-
  <div class="explain-seekle-wrapper">
   <div class="container">
    <div class="Seekle-heading">
     <h2>これからのあなたの新しい暮らしかた</h2>
-     <p>Seekleは語学教室・カメラマン・メイクアップアーティストなど<br>各種サービスのプロバイダーと顧客を繋ぐ場を提供するローカルサービです。</p>
+     <p>Seekleでは語学教室・カメラマン・メイクアップアーティストなど<br>各種サービスのを見つけオンライン予約することが可能です！</p>
     </div>
   </div>
  </div>
@@ -57,24 +56,20 @@
         </div>
   </div>
 
+
      <div class="reasons">
        <div class="reason">
        <div class="icons">
        <i class="fa fa-smile-o fa-5x"></i>
      </div>
  <h2>豊富なジャンル</h2>
-<p>カメラマン、英会話教室、ペットのしつけを頼みたいなど、Seekleは様々なジャンルのプロバイダーを見つけることのできる場です。</p>
+<p>カメラマン、英会話教室、便利屋さんなど、Seekleは様々なジャンルのサービスを見つけることのできる場です。</p>
         </div>
   </div>
   </div>
   </div>
 
-
-
-
 <div class="lesson-wrapper">
-
-
       <div class="heading">
         <h2>How Seekle Works</h2>
       </div>
@@ -83,7 +78,6 @@
         <div class="first">
           <div class="first-icon">
            <%= image_tag 'one.png'%>
-
           </div>
 
           <div class="how-works-explain">
@@ -94,32 +88,27 @@
 
     <div class="first">
       <div class="first-icon">
- <%= image_tag 'two.png' %>
-
+       <%= image_tag 'two.png' %>
       </div>
-
 
       <div class="how-works-explain">
         <h3>2. 選ぼう</h3>
            <p>値段、プロフィール、レビュー、などの様々な情報から、あなたの求めるサービスにあったプロバイダーを比較しよう。</p>
-         </div>
+      </div>
     </div>
 
-
-     <div class="first">
-        <div class="first-icon">
-        <%= image_tag 'three.png' %>
-        </div>
-         <div class="how-works-explain">
-          <h3>3. 依頼しよう</h3>
-            <p>準備ができたら採用！<br>Seekleでの素晴らしい経験を増やしていきましょう。</p>
-        </div>
+ <div class="first">
+   <div class="first-icon">
+     <%= image_tag 'three.png' %>
+   </div>
+      <div class="how-works-explain">
+        <h3>3. 依頼しよう</h3>
+          <p>準備ができたら採用！<br>Seekleでの素晴らしい経験を増やしていきましょう。</p>
+       </div>
+       </div>
       </div>
-      </div>
-
     </div>
   </div>
-
 
   <div class="message-wrapper">
     <div class="container">
@@ -132,4 +121,3 @@
     </div>
     </div>
   </div>
-
