--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -1,21 +1,11 @@
 
   <% if provider_signed_in? %>
   
-<div class="up-var">
-  <div class="upper-menu">
-    <div class="wrapper" >
-      <ul>
-        <li><a href='/providers/main'>マイページ</a></li>
-        <li><a href='/providers/inbox'>メッセージ</a></li>
-        <li><%= link_to '掲載中', notes_path %></li>
-       <li><a href='/users/history'>取引履歴</a></li>
-        <li><a href='/providers'>基本情報</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
+<%= render 'providers/header' %>
+
 
  <% else %> 
+
 <div class="up-var">
  <div class="upper-menu">
     <div class="wrapper" >
@@ -48,6 +38,7 @@
     <% end %> 
   </div>
 </div>
+
 
 <div class="bootstrap">
 <div class="row">
