--- a/app/views/providers/mailer/reset_password_instructions.html.erb
+++ b/app/views/providers/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,20 @@
-<p>Hello <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Seekleをご利用いただき、誠にありがとうございます。</p>
+<p>下記のリンクをクリックしてパスワードを再設定してください。</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>リンク：<%= link_to 'パスワードを変更', edit_password_url(@resource, reset_password_token: @token) %></p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p>※パスワードの再設定の操作をした憶えがない場合は、本メールは無視していただくか、
+Seekleのお問い合わせページよりお問い合わせください。</p>
+
+お困りのことがありましたら、Seekleまでお気軽にご相談ください。
+引き続き、よろしくお願いします。
+
+
+<br>※このEメールアドレスは配信専用です。このメッセージに返信しないようお願いいたします。
+<br>────────────────────────────────
+<br>運営会社：株式会社Seekle
+<br>
+<br>●お問い合せ
+<br>seekle.info@gmail.com
+<br>────────────────────────────────
