--- a/app/views/providers/passwords/edit.html.erb
+++ b/app/views/providers/passwords/edit.html.erb
@@ -1,25 +1,41 @@
-<h2>Change your password</h2>
 
+<div class="providers_signup">
+
+<div class="forgot-password-wrapper">
+<h2>パスワードを変更</h2>
+<p>新しく使うパスワードを入力してください</p>
+
+
+<div class="bootstrap">
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
   <div class="field">
-    <%= f.label :password, "New password" %><br />
+    <%= f.label :password, "新しいパスワード" %><br />
     <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
+      <em>(<%= @minimum_password_length %> 文字以上)</em><br />
     <% end %>
+
+
     <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
+    <%= f.label :password_confirmation, "新しいパスワード(確認)" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
+   <div class="actions">
+    <%= f.submit "パスワードを変更" ,class: "provider_join_btn" %>
   </div>
 <% end %>
 
-<%= render "providers/shared/links" %>
+
+
+
+
+</div>
+</div>
+
+</div>
