--- a/app/views/providers/passwords/new.html.erb
+++ b/app/views/providers/passwords/new.html.erb
@@ -1,23 +1,34 @@
 <div class="providers_signup">
 
+<div class="forgot-password-wrapper">
 <h2>パスワードを忘れた</h2>
+<p>登録されているメールアドレスをご入力ください。<br />
+再設定用のURLをメールにて送信させていただきます。
+</p>
+<div class="bootstrap">
+
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
+
+
+
   <div class="field">
-    <%= f.label :メールアドレス %><br />
-    <%= f.email_field :email, autofocus: true %>
+
+    <%= f.email_field :email, autofocus: true ,placeholder: "abcd@seekle.com" %>
   </div>
 
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "送信" ,class: "provider_join_btn" %>
   </div>
 <% end %>
 
-<%= render "providers/shared/links" %>
+
 
 
 </div>
+</div>
 
+</div>
