noteが掲載完了でmail送信

--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,6 +1,6 @@
 
 <div class="bootstrap">
-<%=  @note.provider.name %>さんの<%= @note.title %>予約フォーム
+<%=  @note.provider.name %>さんの"<%= @note.title %>"予約フォーム
 
 <%= form_for([@note, @reservation], url: {action: 'confirm'} ) do |f| %>
   <% if @reservation.errors.any? %>
