--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,7 +12,7 @@
   </div>
 </div>
 
-<div class="providers_signup">
+<div class="edit_profile_wrapper">
   <div class="bootstrap">
 <h2>一般アカウント設定</h2>
 </br>
