メール内容変更

--- a/app/assets/stylesheets/company/index.css
+++ b/app/assets/stylesheets/company/index.css
@@ -1,5 +1,5 @@
 /*会社概要*/
-.company_content{height:0 auto;color:#fff;     -webkit-font-smoothing: antialiased;}
+.company_content{height:0 auto; margin-bottom:380px;color:#fff;     -webkit-font-smoothing: antialiased;}
 
 
 .company_explanation{height:100px; background-color:white;color:#333}
