--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -5,7 +5,7 @@
 <p>リンク：<%= link_to 'パスワードを変更', edit_password_url(@resource, reset_password_token: @token) %></p>
 
 <p>※パスワードの再設定の操作をした憶えがない場合は、本メールは無視していただくか、
-Seekleのお問い合わせページよりお問い合わせください。</p>
+Seekleのお問い合わせメールよりお問い合わせください。</p>
 
 お困りのことがありましたら、Seekleまでお気軽にご相談ください。
 引き続き、よろしくお願いします。
