send reservation_complete mail to both of user and provider

--- a/app/views/users/history.html.erb
+++ b/app/views/users/history.html.erb
@@ -28,3 +28,12 @@
     <% end %>
   </div>
 </div>
+
+
+<div class="bootstrap">
+ <div class="list-number clearfix">
+   <%= paginate(@reservations) %>
+ </div>
+</div>
+
+
