--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -46,7 +46,7 @@
   </div>
 
   <small>
-   <%= link_to "このサービスを依頼", new_note_reservation_path(@note), :class => 'service_order_btn' %>
+   <%= link_to "このサービスを依頼", new_note_reservation_path(@note), :class => 'shadow_btn' %>
  </small>
 </div>
 </div>
