--- a/app/assets/stylesheets/notes/reservation.css
+++ b/app/assets/stylesheets/notes/reservation.css
@@ -1,7 +1,7 @@
 .reservation-form{margin-top:5%; margin-left:18%; margin-bottom: 7%}
 
-.complete_reservatio_wrapper{margin: 10% 10%;}
-.complete_reservatio_wrapper h1{font-weight: normal;}
+.complete_reservation_wrapper{margin: 10% 10%;text-align: center;}
+.complete_reservation_wrapper h1{font-weight: normal;}
 
 .reservations_list{width:90%; margin-left: 4%;height:0 auto;margin-top: 6%; margin-bottom: 6%;}
 .reservations_list h1{font-size:20px; font-weight: normal;}
@@ -9,3 +9,12 @@
 .reservations_list .bootstrap .table td{padding:30px;}
 
 .listing-wrapper .bootstrap .btn-default{ margin-top:18%;float:right;font-size: 20px;}
+
+.reservation-confirm .bootstrap .shadow_btn{margin-left: 26%; margin-bottom:9%; margin-top:6%;font-size: 20px;padding:20px; background-color:	#FFD700; }
+
+.providers_info_show .bootstrap .shadow_btn{margin-left: 35%; margin-bottom:9%; margin-top:6%;font-size: 20px;padding:9px; background-color:	#FFD700; }
+
+
+.providers_info_show .bootstrap .btn-default{margin-top: 36px; border:none;}
+
+.complete_reservation_wrapper .shadow_btn{margin-left: 35.3%; background-color: #CD5C5C; margin-top: 5%;}
