--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,38 +1,38 @@
 <%= render 'providers/header' %>
 
- <div class="listing-wrapper">
+<div class="listing-wrapper">
   <div class="provider-listings">
-  <div class="provider-listings-heading">
-    <h2>あなたのサービス</h2>
-  </div>
+    <div class="provider-listings-heading">
+      <h2>あなたのサービス</h2>
+    </div>
 
-<div class="bootstrap">
+    <div class="bootstrap">
 
 
-  <% if @notes.blank? %>
-     <p>予約はまだありません</p>
+      <% if @notes.blank? %>
+      <p>掲載中のサービスはまだありません</p>
 
-   <% else %>
-   <ul>
- <% @notes.each do |note|  %>
-      <li> 
-       <div class="panel panel-default">
-         <div class="panel-heading">
-          <%= link_to note.title, note_path(note) %>
-         </div>
-           <div class="panel-body-list">
+      <% else %>
+      <ul>
+       <% @notes.each do |note|  %>
+       <li> 
+         <div class="panel panel-default">
+           <div class="panel-heading">
+            <%= link_to note.title, note_path(note) %> 　 <%= note.reservations.count %>件の予約があります！
+          </div>
+          <div class="panel-body-list">
            <%= image_tag note.service_image1_url ,class: "service_image"%>
-   <%= link_to '予約を確認する', note_reservations_path(note), class:"btn btn-default" %>
-             <%= link_to '編集する', edit_note_path(note), class:"btn btn-default" %>
-
-          
-           </div>
+        
+           <%= link_to '予約を確認する', note_reservations_path(note), class:"btn btn-default" %>
+           <%= link_to '編集する', edit_note_path(note), class:"btn btn-default" %>
+           
          </div>
-      </li>   
+       </div>
+     </li>   
      <% end %>
-     </ul>
-  <% end %>
-  </div>
+   </ul>
+   <% end %>
+ </div>
 </div>
 
 
