--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,9 +1,8 @@
-
 <div class="providers_new_post">
   <div class="bootstrap">
     <%= form_for(@note, class: 'form-horizontal', role: 'form' ) do |f| %>
-    <% if @note.errors.any? %>
-    <div class="alert alert-danger">
+     <% if @note.errors.any? %>
+      <div class="alert alert-danger">
      <ul>
        <% @note.errors.full_messages.each do |msg| %>
        <li><%= msg %></li>
@@ -24,11 +23,6 @@
     <%= f.select(:category_id, Category.all.collect {|p| [ p.title, p.id ] }, {}, { multiple: false, class: "chosen-select form-control" })%>
      </td>
      <tr>
-
-
-
-
-
        <th> <p><%= f.label Note.human_attribute_name 'サービスのタイトル' %> <span class="form-label required">必須</span></p></th>
        <td>
         <%= f.text_field :title, class: 'form-control',placeholder:"サービス内容がわかるタイトルにしましょう" %>
@@ -64,33 +58,34 @@
 
 
 <tr>
- <th> <p><%= f.label Note.human_attribute_name 'お客様へのお願い' %><span class="form-label required">必須</span></p></th>
- <td>
-  <%= f.text_area :rule, class: 'content-area' %>
-</td>
+ <th> <p><%= f.label Note.human_attribute_name 'お客様へのお願い' %><span class="form-label required">必須</span> </p></th>
+  <td>
+   <%= f.text_area :rule, class: 'content-area' %>
+  </td>
 </tr>
 
 <tr>
  <th> <p><%= f.label Note.human_attribute_name '変更とキャンセル' %><span class="form-label optional">任意</span></p></th>
- <td>
-  <%= f.text_area :cancelrule, class: 'content-area', placeholder:"あなたのサービスについて詳しく説明しよう" %>
-</td>
+  <td>
+   <%= f.text_area :cancelrule, class: 'content-area', placeholder:"予約成立後の変更・キャンセルは、作業の6日前まで承ります。
+期限を過ぎてのキャンセルは、5日前から2日前までは予約金額の25%、前日までは50%、それ以降は100%のキャンセル料が発生することがございますので、ご了承ください。" %>
+  </td>
 </tr>
 
 <tr>
  <th> <p><%= f.label Note.human_attribute_name '詳しいサービス内容' %><span class="form-label optional">任意</span></p></th>
- <td>
-  <%= f.text_area :content, class: 'content-area', placeholder:"あなたのサービスについて詳しく説明しよう" %>
-</td>
+  <td>
+   <%= f.text_area :content, class: 'content-area', placeholder:"あなたのサービスについて詳しく説明しよう" %>
+  </td>
 </tr>
 
 <tr>
  <th> <p><%= f.label Note.human_attribute_name '写真' %><span class="form-label required">必須</span></p></th>
- <td>
-  <%= f.file_field :service_image1, class: "form-control image-field" %>
-</td>
+  <td>
+   <%= f.file_field :service_image1, class: "form-control image-field" %>
+  </td>
 </tr>
-</div>
+ </div>
 </table>
 </div>
 <%= f.submit '作成する', class: 'btn btn-default', data:{ disable_with: "作成中・・・"} %>
