--- a/app/assets/stylesheets/providers/providers.css
+++ b/app/assets/stylesheets/providers/providers.css
@@ -55,8 +55,7 @@ clear:both;
 
 .edit-button{margin-left:81%}
 
-
-.bootstrap .btn-default{float:left;margin:23px 10px;}
+.message_reservetion .bootstrap .btn-default{float:left;margin:23px 40px; }
 
 
 
