--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -44,7 +44,7 @@
   <div class="bootstrap">
 
 
-   <%= link_to "メッセージを送る",  new_note_conversation_path(@note),:class =>'btn btn-default' %>
+   <%= link_to "お問い合わせする",  new_note_conversation_path(@note),:class =>'btn btn-default' %>
 
   </div>
 
